Selecting a line should also select the line ending
Submitted by Joachim Noreiko
Link to original bug (#323886)
Description
Distribution/Version: Ubuntu 5.10
A whole line of text in gedit can be selected with a triple mouse click. However, this doesn't include the newline character in the selection.
Consequence: using cut & paste or drag & drop to move the line glues it to the following line at the destination, and messes up indentation.
Version: 3.22.x