textview: select newline on triple-click select (#253)

When triple-clicking a line, also select the newline character to
avoid causing formatting issues on pasting the selected line.

Technically this is done by jumping to the start of the next display
line, instead of the previous behaviour, jumping to the end of the current
display line.

https://gitlab.gnome.org/GNOME/gtk/issues/253